--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
+					<h1>Отладка JavaScript</h1>
 				</section>
 			</div>
 		</div>
