--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <!--		<link rel="stylesheet" href="node_modules/reveal.js/dist/reset.css">-->
 		
-		<link rel="stylesheet" href="/reveal.css">
-		<link rel="stylesheet" href="/black.css">
+		<link rel="stylesheet" href="/js-debug/reveal.css">
+		<link rel="stylesheet" href="/js-debug/black.css">
 
 <!-- <link rel="stylesheet" href="node_modules/reveal.js/dist/reveal.css">
 <link rel="stylesheet" href="node_modules/reveal.js/dist/theme/black.css"> -->
@@ -26,8 +26,8 @@
 			</div>
 		</div>
 		
-		<script src="/reveal.js"></script>
-		<script src="/notes.js"></script>
+		<script src="/js-debug/reveal.js"></script>
+		<script src="/js-debug/notes.js"></script>
 		<!-- 	<script src="node_modules/reveal.js/plugin/markdown/markdown.js"></script>
 		<script src="node_modules/reveal.js/plugin/highlight/highlight.js"></script> -->
 		<script>
