--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 			<div class="slides">
 				<section>
 					<h1>Отладка JavaScript</h1>
+					<p align="right">&copy; <a href="mailto:ipigp@yandex.ru">IGP</a>, декабрь 2024 г.</p>
 				</section>
+				<section>
+				<h4>Консоль разработчика</h4>
+				<p>Код уязвим для ошибок.</p>
+				</section>
+
 			</div>
 		</div>
 		
@@ -35,6 +41,7 @@
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
+				slideNumber: 'c/t',
 				hash: true,
 				// multiplex: {
 				// 	secret:'17339873593016112019',
