--- a/index.html
+++ b/index.html
@@ -25,8 +25,21 @@
 					<p align="right">&copy; <a href="mailto:ipigp@yandex.ru">IGP</a>, декабрь 2024 г.</p>
 				</section>
 				<section>
+					<aside class="notes">
+						<p>
+							По умолчанию в браузере ошибки не видны.<br/>
+							То есть, если что-то пойдёт не так, мы не увидим, что именно сломалось, и не сможем это починить.
+						</p>
+						<p>
+							Chrome и Firefox снискали любовь подавляющего большинства программистов во многом благодаря своим отменным инструментам разработчика. 
+						</p>
+						<p>
+							Для начала знакомства с этими мощными инструментами давайте выясним, как их открывать, смотреть ошибки и запускать команды JavaScript.
+						</p>	
+					</aside>
 				<h4>Консоль разработчика</h4>
 				<p>Код уязвим для ошибок.</p>
+				<p>«Инструменты разработки» (Developer tools или сокращённо — devtools).</p>
 				</section>
 
 			</div>
