--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="node_modules/reveal.js/dist/theme/black.css"> -->
 	
 		<!-- Theme used for syntax highlighted code -->
-<!--		<link rel="stylesheet" href="node_modules/reveal.js/plugin/highlight/monokai.css"> -->
+		<link rel="stylesheet" href="/js-debug/monokai.css">
 	</head>
 	<body>
 		<div class="reveal">
@@ -39,7 +39,8 @@
 					</aside>
 				<h4>Консоль разработчика</h4>
 				<p>Код уязвим для ошибок.</p>
-				<p>«Инструменты разработки» (Developer tools или сокращённо — devtools).</p>
+				<p>Для WEB-обозревателей: «Инструменты разработки» (Developer tools).</p>
+				<p>Для Node: объект <code>console</code></p>
 				</section>
 
 			</div>
