--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				</section>
 				<section>
 					<p>Developer tools можно запустить нажав <kbd class="shortcut">F12</kbd></p>
-					<img ser="/js-debug/pic/chrome.png"/>
+					<img src="/js-debug/pic/chrome.png"/>
 					<p>Под сообщением об ошибке находится синий символ <code>&gt;</code>. Он обозначает командную строку, в ней мы можем редактировать и запускать JavaScript-команды. 
 					Для их запуска нажмите <kbd class="shortcut">Enter</kbd>.</p>
 				</section>
