--- a/index.html
+++ b/index.html
@@ -102,50 +102,43 @@
 						<code>console.warn()</code>
 					</pre>
 					<aside class="notes">					
-						console.assert()
-							Выводит в консоль (имеется ввиду веб-консоль) сообщение и стек вызова метода, если первый аргумент false.
+						<b>console.assert()</b>
+							Выводит в консоль (имеется ввиду веб-консоль) сообщение и стек вызова метода, если первый аргумент false.<br/>
 
-						console.clear()
-							Очистка консоли.
+						<b>console.clear()</b>
+							Очистка консоли.<br/>
 
-						console.count()
-							Выводит количество вызовов метода с определённой меткой (передаётся в параметре метода)
+						<b>console.count()</b>
+							Выводит количество вызовов метода с определённой меткой (передаётся в параметре метода)<br/>
 
-						console.countReset()
-							Обнуляет значение счётчика с заданным значением.
+						<b>console.countReset()</b>
+							Обнуляет значение счётчика с заданным значением.<br/>
 
-						console.debug()
-							Синоним для log()
+						<b>console.debug()</b>
+							Синоним для log()<br/>
 
-						console.error()
-							Выводит сообщение об ошибке. Для форматирования вы можете использовать подстановочные символы (маски) с дополнительными параметрами.
+						<b>console.error()</b>
+							Выводит сообщение об ошибке. Для форматирования вы можете использовать подстановочные символы (маски) с дополнительными параметрами.<br/>
 
-						console.group()
-							Создаёт новую группировку сообщений, сдвигая все следующие выводимые строки вправо на один уровень. Для завершения группы вызовите groupEnd().
+						<b>console.group()</b>
+							Создаёт новую группировку сообщений, сдвигая все следующие выводимые строки вправо на один уровень. Для завершения группы вызовите groupEnd().<br/>
 
-						console.groupCollapsed()
-							Создаёт новую группировку сообщений, сдвигая все следующие сообщения вправо на один уровень; в отличие от group() вывод происходи в свёрнутую группу, требующую раскрыть её вручную по кнопке. Для завершения группывызовите groupEnd().
+						<b>console.info()</b>
+							Информационное сообщение. Для форматирования вы можете использовать подстановочные символы (маски) с дополнительными параметрами.<br/>
 
-						console.groupEnd()
-							Выход из текущей группы.
+						<b>console.log()</b>
+							Общий метод вывода информации. Для форматирования вы можете использовать подстановочные символы (маски) с дополнительными параметрами.<br/>
 
-						console.info()
-							Информационное сообщение. Для форматирования вы можете использовать подстановочные символы (маски) с дополнительными параметрами.
+						<b>console.table()</b>
+							Отображает табличные данные в виде таблицы.<br/>
 
-						console.log()
-							Общий метод вывода информации. Для форматирования вы можете использовать подстановочные символы (маски) с дополнительными параметрами.
+						<b>console.time()</b>
+							Запускает таймер с именем из переданного параметра. Можно запустить одновременно до 10,000 таймеров на странице.<br/>
 
-						console.table()
-							Отображает табличные данные в виде таблицы.
+						<b>console.timeEnd()</b>
+							Останавливает указанный таймер и записывает в лог, сколько прошло секунд от его старта.<br/>
 
-						console.time()
-							Запускает таймер с именем из переданного параметра. Можно запустить одновременно до 10,000 таймеров на странице.
-
-						console.timeEnd()
-							Останавливает указанный таймер и записывает в лог, сколько прошло секунд от его старта.
-
-						console.trace()
-							Вывод трассировки стека.
+						<b>console.trace()</b> 							Вывод трассировки стека.
 					</aside>
 				</section>
 				<section>
