--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				</section>
 				<section>
 					<pre>
-						<code>
+						<code  data-line-numbers data-trim data-noescape>
 							<!DOCTYPE HTML>
 							<html>
 							<head>
@@ -102,43 +102,19 @@
 						<code>console.warn()</code>
 					</pre>
 					<aside class="notes">					
-						<b>console.assert()</b>
-							Выводит в консоль (имеется ввиду веб-консоль) сообщение и стек вызова метода, если первый аргумент false.<br/>
-
-						<b>console.clear()</b>
-							Очистка консоли.<br/>
-
-						<b>console.count()</b>
-							Выводит количество вызовов метода с определённой меткой (передаётся в параметре метода)<br/>
-
-						<b>console.countReset()</b>
-							Обнуляет значение счётчика с заданным значением.<br/>
-
-						<b>console.debug()</b>
-							Синоним для log()<br/>
-
-						<b>console.error()</b>
-							Выводит сообщение об ошибке. Для форматирования вы можете использовать подстановочные символы (маски) с дополнительными параметрами.<br/>
-
-						<b>console.group()</b>
-							Создаёт новую группировку сообщений, сдвигая все следующие выводимые строки вправо на один уровень. Для завершения группы вызовите groupEnd().<br/>
-
-						<b>console.info()</b>
-							Информационное сообщение. Для форматирования вы можете использовать подстановочные символы (маски) с дополнительными параметрами.<br/>
-
-						<b>console.log()</b>
-							Общий метод вывода информации. Для форматирования вы можете использовать подстановочные символы (маски) с дополнительными параметрами.<br/>
-
-						<b>console.table()</b>
-							Отображает табличные данные в виде таблицы.<br/>
-
-						<b>console.time()</b>
-							Запускает таймер с именем из переданного параметра. Можно запустить одновременно до 10,000 таймеров на странице.<br/>
-
-						<b>console.timeEnd()</b>
-							Останавливает указанный таймер и записывает в лог, сколько прошло секунд от его старта.<br/>
-
-						<b>console.trace()</b> 							Вывод трассировки стека.
+						<b>console.assert()</b>Выводит в консоль (имеется ввиду веб-консоль) сообщение и стек вызова метода, если первый аргумент false.<br/>
+						<b>console.clear()</b>Очистка консоли.<br/>
+						<b>console.count()</b>Выводит количество вызовов метода с определённой меткой (передаётся в параметре метода)<br/>
+						<b>console.countReset()</b>Обнуляет значение счётчика с заданным значением.<br/>
+						<b>console.debug()</b>Синоним для log()<br/>
+						<b>console.error()</b>Выводит сообщение об ошибке. Для форматирования вы можете использовать подстановочные символы (маски) с дополнительными параметрами.<br/>
+						<b>console.group()</b>Создаёт новую группировку сообщений, сдвигая все следующие выводимые строки вправо на один уровень. Для завершения группы вызовите groupEnd().<br/>
+						<b>console.info()</b>Информационное сообщение. Для форматирования вы можете использовать подстановочные символы (маски) с дополнительными параметрами.<br/>
+						<b>console.log()</b>Общий метод вывода информации. Для форматирования вы можете использовать подстановочные символы (маски) с дополнительными параметрами.<br/>
+						<b>console.table()</b>Отображает табличные данные в виде таблицы.<br/>
+						<b>console.time()</b>Запускает таймер с именем из переданного параметра. Можно запустить одновременно до 10,000 таймеров на странице.<br/>
+						<b>console.timeEnd()</b>Останавливает указанный таймер и записывает в лог, сколько прошло секунд от его старта.<br/>
+						<b>console.trace()</b>Вывод трассировки стека.
 					</aside>
 				</section>
 				<section>
