--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				</section>
 				<section>
 					<pre>
-						<code  data-line-numbers data-trim data-noescape>
+						<code  data-line-numbers data-trim><!-- data-noescape> -->
 							<!DOCTYPE HTML>
 							<html>
 							<head>
