--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				</section>
 				<section>
 					<pre>
-						<code  data-line-numbers data-trim><!-- data-noescape> -->
+						<code  data-line-numbers data-trim><script type="text/template">
 							<!DOCTYPE HTML>
 							<html>
 							<head>
@@ -60,7 +60,7 @@
 <!--							<script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"8f2034c728e4a896","serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"version":"2024.10.5","token":"9f3ad1cf53354ef3a8f18d624192683f"}' crossorigin="anonymous"></script>
 -->							</body>
 							</html>
-						</code>
+						</script></code>
 					</pre>
 					<aside class="notes">
 						рассмотрим код. Он содержит ошибку.<br/>
