--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							  На этой странице есть ошибка в скрипте.
 							  <script>
 								lalala
-							  &lt;/script&gt;
+							  $lt;/script$gt;
 							</body>
 							</html>
 						</script></code>
