--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							  На этой странице есть ошибка в скрипте.
 							  <script>
 								lalala
-							  </script&nbsp;>
+							  < /script >
 							</body>
 							</html>
 						</script></code>
