--- a/index.html
+++ b/index.html
@@ -125,14 +125,18 @@
 					</pre>
 					<pre><code>[09:27:13.475] ({str:"Some text", id:5})</code></pre>
 					<br/>
-					<pre><code>
-						var car = "Dodge Charger";
-var someObject = { str: "Some text", id: 5 };
-console.info("My first car was a", car, ". The object is: ", someObject);
-					</code></pre>
-					<pre></code>
+					<pre>
+						<code>
+							var car = "Dodge Charger";
+							var someObject = { str: "Some text", id: 5 };
+							console.info("My first car was a", car, ". The object is: ", someObject);
+						</code>
+					</pre>
+					<pre>
+						<code>
 							[09:28:22.711] My first car was a Dodge Charger . The object is:  ({str:"Some text", id:5})
-					</code></pre>
+						</code>
+					</pre>
 				</section>
 				<section>
 					<h4>Преобразование строк с использованием масок</h4>
