--- a/index.html
+++ b/index.html
@@ -118,22 +118,22 @@
 				</section>
 				<section>
 					<pre>
-						<code>
+						<code data-line-numbers data-trim>
 							var someObject = { str: "Some text", id: 5 };
 							console.log(someObject);
 						</code>
 					</pre>
-					<pre><code>[09:27:13.475] ({str:"Some text", id:5})</code></pre>
+					<pre><code data-trim>[09:27:13.475] ({str:"Some text", id:5})</code></pre>
 					<br/>
 					<pre>
-						<code>
+						<code data-line-numbers data-trim>
 							var car = "Dodge Charger";
 							var someObject = { str: "Some text", id: 5 };
 							console.info("My first car was a", car, ". The object is: ", someObject);
 						</code>
 					</pre>
 					<pre>
-						<code>
+						<code data-trim>
 							[09:28:22.711] My first car was a Dodge Charger . The object is:  ({str:"Some text", id:5})
 						</code>
 					</pre>
