--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
 				</section>
 				<section>
 					<h4>Преобразование строк с использованием масок</h4>
-					<table>
-						<tr><td>%o или %O</td><td>Выводит ссылку на JavaScript-объект. Нажатие на ссылку приведёт к открытию инспектора кода.</td></tr>
-						<tr><td>%d или %i</td><td>Выведет целое число. Поддерживается форматирование, например, console.log("АБВГД %.2d", 1.1) выведет число как две значащих цифры с лидирующим нулём: АБВГД 01</td></tr>
-						<tr><td>%s</td><td>Выводит строку.</td></tr>
-						<td><td>%f</td><td>Выводит число с плавающей точкой. Поддерживается форматирование, например, console.log("АБВГД %.2f", 1.1) выведет число до двух знаков после запятой: АБВГД 1.10</td></tr>
-					</table>
+						%o или %O - выводит ссылку на JavaScript-объект. Нажатие на ссылку приведёт к открытию инспектора кода.<br/>
+						%d или %i - выведет целое число. Поддерживается форматирование, например, console.log("АБВГД %.2d", 1.1) выведет число как две значащих цифры с лидирующим нулём: АБВГД 01<br/>
+						%s - выводит строку.<br/>
+						%f - выводит число с плавающей точкой. Поддерживается форматирование, например, console.log("АБВГД %.2f", 1.1) выведет число до двух знаков после запятой: АБВГД 1.10
+				</section>				
+				<section>	
 					<pre><code>
 						for (var i=0; i<5; i++) {
 						  console.log("Hello, %s. You've called me %d times.", "Bob", i+1);
