--- a/index.html
+++ b/index.html
@@ -139,10 +139,7 @@
 				</section>
 				<section>
 					<h4>Преобразование строк с использованием масок</h4>
-						%o или %O - выводит ссылку на JavaScript-объект. Нажатие на ссылку приведёт к открытию инспектора кода.<br/>
-						%d или %i - выведет целое число. Поддерживается форматирование, например, console.log("АБВГД %.2d", 1.1) выведет число как две значащих цифры с лидирующим нулём: АБВГД 01<br/>
-						%s - выводит строку.<br/>
-						%f - выводит число с плавающей точкой. Поддерживается форматирование, например, console.log("АБВГД %.2f", 1.1) выведет число до двух знаков после запятой: АБВГД 1.10
+						<img src="/js-debug/pic/1.png"/>
 				</section>				
 				<section>	
 					<pre><code>
