--- a/index.html
+++ b/index.html
@@ -144,16 +144,17 @@
 				<section>	
 					<pre><code>
 						for (var i=0; i<5; i++) {
-						  console.log("Hello, %s. You've called me %d times.", "Bob", i+1);
+						  console.log("Hello, %s. You've called me %d times.", 
+									"Bob", i+1);
 						}					
 					</code></pre>
-					<pre>
+					<pre><code>
 					[13:14:13.481] Hello, Bob. You've called me 1 times.<br/>
 					[13:14:13.483] Hello, Bob. You've called me 2 times.<br/>
 					[13:14:13.485] Hello, Bob. You've called me 3 times.<br/>
 					[13:14:13.487] Hello, Bob. You've called me 4 times.<br/>
 					[13:14:13.488] Hello, Bob. You've called me 5 times.
-					</pre>
+					</code></pre>
 				</section>
 				<section>
 				</section>				
