--- a/index.html
+++ b/index.html
@@ -142,18 +142,18 @@
 						<img src="/js-debug/pic/1.png"/>
 				</section>				
 				<section>	
-					<pre><code>
+					<pre><code data-line-numbers data-trim>
 						for (var i=0; i<5; i++) {
 						  console.log("Hello, %s. You've called me %d times.", 
 									"Bob", i+1);
 						}					
 					</code></pre>
-					<pre><code>
-					[13:14:13.481] Hello, Bob. You've called me 1 times.<br/>
-					[13:14:13.483] Hello, Bob. You've called me 2 times.<br/>
-					[13:14:13.485] Hello, Bob. You've called me 3 times.<br/>
-					[13:14:13.487] Hello, Bob. You've called me 4 times.<br/>
-					[13:14:13.488] Hello, Bob. You've called me 5 times.
+					<pre><code data-trim>
+						[13:14:13.481] Hello, Bob. You've called me 1 times.<br/>
+						[13:14:13.483] Hello, Bob. You've called me 2 times.<br/>
+						[13:14:13.485] Hello, Bob. You've called me 3 times.<br/>
+						[13:14:13.487] Hello, Bob. You've called me 4 times.<br/>
+						[13:14:13.488] Hello, Bob. You've called me 5 times.
 					</code></pre>
 				</section>
 				<section>
