--- a/index.html
+++ b/index.html
@@ -149,10 +149,9 @@
 						}					
 					</code></pre>
 					<pre><code data-trim>
-						[13:14:13.481] Hello, Bob. You've called me 1 times.<br/>
-						[13:14:13.483] Hello, Bob. You've called me 2 times.<br/>
-						[13:14:13.485] Hello, Bob. You've called me 3 times.<br/>
-						[13:14:13.487] Hello, Bob. You've called me 4 times.<br/>
+						[13:14:13.481] Hello, Bob. You've called me 1 times.
+						[13:14:13.485] Hello, Bob. You've called me 3 times.
+						[13:14:13.487] Hello, Bob. You've called me 4 times.
 						[13:14:13.488] Hello, Bob. You've called me 5 times.
 					</code></pre>
 				</section>
