--- a/index.html
+++ b/index.html
@@ -156,12 +156,52 @@
 					</code></pre>
 				</section>
 				<section>
+					<h4>Стилизация вывода консоли</h4>
+					<pre><code data-trim>
+						console.log("This is %cMy stylish message",
+							"color: yellow; font-style: italic; background-color: blue; padding: 2px;",
+						);
+					</code></pre>
+					<img src="/js-debug/pic/2.png"/>
 				</section>				
 				<section>
+					<h4>Группирование вывода в консоли</h4>
+					<pre><code data-trim>
+						console.log("This is the outer level");
+						console.group();
+						console.log("Level 2");
+						console.group();
+						console.log("Level 3");
+						console.warn("More of level 3");
+						console.groupEnd();
+						console.log("Back to level 2");
+						console.groupEnd();
+						console.debug("Back to the outer level");
+					<pre><code data-trim>
+					<img src="/js-debug/pic/3.png"/>
 				</section>				
 				<section>
+					<h4>Таймеры</h4>
+					<pre><code data-trim>
+						console.time("answer time");
+						alert("Click to continue");
+						console.timeEnd("answer time");
+					</code></pre>
+					<img src="/js-debug/pic/4.png"/>
 				</section>				
 				<section>
+					<h4>Трассировка стека вызова</h4>
+					<pre><code data-trim>
+						foo();
+
+						function foo() {
+						  function bar() {
+							console.trace();
+						  }
+						  bar();
+						}
+					</code></pre>
+					<img src="/js-debug/pic/5.png"/>
 				</section>				
 				<section>
 				</section>				
