--- a/index.html
+++ b/index.html
@@ -139,15 +139,17 @@
 				</section>
 				<section>
 					<h4>Преобразование строк с использованием масок</h4>
-						<img src="/js-debug/pic/1.png"/>
+					<img src="/js-debug/pic/1.png"/>
 				</section>				
 				<section>	
-					<pre><code data-line-numbers data-trim>
-						for (var i=0; i<5; i++) {
-						  console.log("Hello, %s. You've called me %d times.", 
-									"Bob", i+1);
-						}					
-					</code></pre>
+					<pre>
+						<code data-line-numbers data-trim>
+							for (let i=0; 5 > i i++) {
+							  console.log("Hello, %s. You've called me %d times.", 
+										"Bob", i+1);
+							}
+						</code>
+					</pre>
 					<pre><code data-trim>
 						[13:14:13.481] Hello, Bob. You've called me 1 times.
 						[13:14:13.485] Hello, Bob. You've called me 3 times.
