--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 				</section>				
 				<section>	
 					<pre>
-						<code data-line-numbers data-trim>
+						<code data-trim>
 							for (let i=0; 5 > i i++) {
 							  console.log("Hello, %s. You've called me %d times.", 
 										"Bob", i+1);
@@ -179,7 +179,7 @@
 						console.log("Back to level 2");
 						console.groupEnd();
 						console.debug("Back to the outer level");
-					<pre><code data-trim>
+					</code></pre>
 					<img src="/js-debug/pic/3.png"/>
 				</section>				
 				<section>
