--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				<section>	
 					<pre>
 						<code data-trim>
-							for (let i=0; 5 > i i++) {
+							for (let i=0; 5 > i; i++) {
 							  console.log("Hello, %s. You've called me %d times.", 
 										"Bob", i+1);
 							}
