--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 				</section>				
 				<section>	
 					<pre>
-						<code data-trim>
-							for (let i=0; 5 > i; i++) {
+						<code data-trim data-noescape>
+							for (let i=0; i < 5; i++) {
 							  console.log("Hello, %s. You've called me %d times.", 
 										"Bob", i+1);
 							}
