--- a/index.html
+++ b/index.html
@@ -214,7 +214,24 @@
 						</code>
 					</pre>
 					<img src="/js-debug/pic/5.png"/>
-				</section>				
+				</section>	
+				<section>
+					<h4>Console.log или alert</h4>
+					<pre>
+						<code>
+							const a = { id: 1, value: 'one text' }
+							alert(a)
+							// [object Object]
+						</code>
+					</pre>
+					<pre>
+						<code>
+							const a = { id: 1, value: 'one text' }
+							console.log(a)
+							// Object { id: 1, value: "one text" }
+						</code>
+					</pre>
+				</section>
 			</div>
 		</div>
 		
