--- a/index.html
+++ b/index.html
@@ -218,14 +218,14 @@
 				<section>
 					<h4>Console.log или alert</h4>
 					<pre>
-						<code>
+						<code data-trim data-noescape>
 							const a = { id: 1, value: 'one text' }
 							alert(a)
 							// [object Object]
 						</code>
 					</pre>
 					<pre>
-						<code>
+						<code data-trim data-noescape>
 							const a = { id: 1, value: 'one text' }
 							console.log(a)
 							// Object { id: 1, value: "one text" }
