--- a/index.html
+++ b/index.html
@@ -242,16 +242,19 @@
 							  { section: 'JavaScript', count: 182 },
 							  { section: 'Tools', count: 211 },
 							]
-
 							console.table(data)
-							// ┌─────────┬──────────────┬───────┐
-							// │ (index) │   section    │ count │
-							// ├─────────┼──────────────┼───────┤
-							// │    0    │    'HTML'    │  212  │
-							// │    1    │    'CSS'     │  121  │
-							// │    2    │ 'JavaScript' │  182  │
-							// │    3    │   'Tools'    │  211  │
-							// └─────────┴──────────────┴───────┘
+						</code>
+					</pre>
+					<pre>
+						<code data-trim>
+							┌─────────┬──────────────┬───────┐
+							│ (index) │   section    │ count │
+							├─────────┼──────────────┼───────┤
+							│    0    │    'HTML'    │  212  │
+							│    1    │    'CSS'     │  121  │
+							│    2    │ 'JavaScript' │  182  │
+							│    3    │   'Tools'    │  211  │
+							└─────────┴──────────────┴───────┘
 						</code>
 					</pre>
 				</section>
