--- a/index.html
+++ b/index.html
@@ -258,6 +258,26 @@
 						</code>
 					</pre>
 				</section>
+				<section>
+					<pre>
+						<code data-trim>
+							const language = 'JavaScript'
+							const count = 100
+
+							console.log('language:', language, 'count:', count)
+							// language: JavaScript count: 100
+						</code>
+					</pre>
+					<pre>
+						<code data-trim>
+							const language = 'JavaScript'
+							const count = 100
+
+							console.log({ language, count })
+							// { language: 'JavaScript', count: 100 }
+						</code>
+					</pre>
+				</section>
 			</div>
 		</div>
 		
